# emoji_searcher

./: Cargo.toml  README.md
examples/: search_emojis.rs
res/: package.json  shortcodes.tar
src/: db.rs  lib.rs  searcher.rs
